Updates for Sama suffix and few ZC updates

--- a/email/ja/email_template_direct_email.html
+++ b/email/ja/email_template_direct_email.html
@@ -10,7 +10,7 @@ $EMAIL_COMMON_CSS
 
 </head>
 
-<body id="newsletters">
+<body id="direct_mail">
 <div class="holder">
 
   <!-- Header Section -->
@@ -22,14 +22,13 @@ $EMAIL_COMMON_CSS
 
   <!-- Content Section -->
   <div class="content">
-    <div>$EMAIL_SALUTATION $EMAIL_FIRST_NAME $EMAIL_LAST_NAME $EMAIL_GREET,</div>
+    <div>$EMAIL_LAST_NAME $EMAIL_FIRST_NAME $EMAIL_GREET</div>
     <div>$EMAIL_MESSAGE_HTML</div>
   </div>
 
 
   <!-- Footer Section -->
   <div class="footer">
-    <div class="unsubscribe">$UNSUBSCRIBE_LINK</div>
     <div class="copyright">$EMAIL_FOOTER_COPYRIGHT</div>
   </div>
 
