--- a/email/ja/email_template_gv_queue.html
+++ b/email/ja/email_template_gv_queue.html
@@ -22,7 +22,7 @@ $EMAIL_COMMON_CSS
 
   <!-- Content Section -->
   <div class="content">
-    <div class="gv">$EMAIL_SALUTATION $EMAIL_FIRST_NAME $EMAIL_LAST_NAME $EMAIL_GREET</div>
+    <div class="gv">$EMAIL_LAST_NAME $EMAIL_FIRST_NAME $EMAIL_GREET</div>
     <div class="gv">$GV_NOTICE_HEADER</div>
     <div class="gv">$GV_NOTICE_RELEASED</div>
     <div class="gv">$GV_NOTICE_AMOUNT_REDEEM</div>
