--- a/email/ja/email_template_order_status.html
+++ b/email/ja/email_template_order_status.html
@@ -10,7 +10,7 @@ $EMAIL_COMMON_CSS
 
 </head>
 
-<body id="gv_mail">
+<body id="order_status">
 <div class="holder">
 
   <!-- Header Section -->
@@ -19,25 +19,30 @@ $EMAIL_COMMON_CSS
     $EXTRA_HEADER_INFO
   </div>
 
+
   <!-- Content Section -->
   <div class="content">
-    <div>$EMAIL_SALUTATION $EMAIL_FIRST_NAME $EMAIL_LAST_NAME $EMAIL_GREET,</div>
-    <br>
-    <div>$EMAIL_MESSAGE_HTML</div>
-    <!-- GV_BLOCK html includes a containing div as optionally used also in email_template_welcome) -->
-    $GV_BLOCK
+    <div>$EMAIL_CUSTOMERS_NAME $EMAIL_GREET,</div>
+    <div>$EMAIL_TEXT_ORDER_NUMBER</div>
+    <div>$EMAIL_TEXT_INVOICE_URL</div>
+    <div>$EMAIL_TEXT_DATE_ORDERED</div>
+    <div>$EMAIL_TEXT_STATUS_COMMENTS</div>
+    <div>$EMAIL_TEXT_STATUS_UPDATED</div>
+    <div>$EMAIL_TEXT_STATUS_LABEL</div>
+    <div>$EMAIL_TEXT_STATUS_PLEASE_REPLY</div>
+    <div>$EMAIL_STORE_NAME</div>
   </div>
+
+  <div class="order_message">
+    <div class="order_message">$EMAIL_ORDER_UPDATE_MESSAGE</div>
+  </div>
+
 
   <!-- Footer Section -->
   <div class="footer">
-    <div class="unsubscribe">$UNSUBSCRIBE_LINK</div>
     <div class="copyright">$EMAIL_FOOTER_COPYRIGHT</div>
   </div>
 
-</div>
-<div class="disclaimer">
-  <div class="disclaimer1">$EMAIL_DISCLAIMER</div>
-  <div class="disclaimer2">$EMAIL_SPAM_DISCLAIMER</div>
 </div>
 </body>
 </html>
