--- a/email/ja/email_template_product_notification.html
+++ b/email/ja/email_template_product_notification.html
@@ -10,7 +10,7 @@ $EMAIL_COMMON_CSS
 
 </head>
 
-<body id="order_status">
+<body id="product_notification">
 <div class="holder">
 
   <!-- Header Section -->
@@ -22,19 +22,8 @@ $EMAIL_COMMON_CSS
 
   <!-- Content Section -->
   <div class="content">
-    <div>$EMAIL_SALUTATION $EMAIL_CUSTOMERS_NAME $EMAIL_GREET,</div>
-    <div>$EMAIL_TEXT_ORDER_NUMBER</div>
-    <div>$EMAIL_TEXT_INVOICE_URL</div>
-    <div>$EMAIL_TEXT_DATE_ORDERED</div>
-    <div>$EMAIL_TEXT_STATUS_COMMENTS</div>
-    <div>$EMAIL_TEXT_STATUS_UPDATED</div>
-    <div>$EMAIL_TEXT_STATUS_LABEL</div>
-    <div>$EMAIL_TEXT_STATUS_PLEASE_REPLY</div>
-    <div>$EMAIL_STORE_NAME</div>
-  </div>
-
-  <div class="order_message">
-    <div class="order_message">$EMAIL_ORDER_UPDATE_MESSAGE</div>
+    <div>$EMAIL_LAST_NAME $EMAIL_FIRST_NAME $EMAIL_GREET,</div>
+    <div>$EMAIL_MESSAGE_HTML</div>
   </div>
 
 
@@ -43,6 +32,10 @@ $EMAIL_COMMON_CSS
     <div class="copyright">$EMAIL_FOOTER_COPYRIGHT</div>
   </div>
 
+</div>
+<div class="disclaimer">
+  <div class="disclaimer1">$EMAIL_DISCLAIMER</div>
+  <div class="disclaimer2">$EMAIL_SPAM_DISCLAIMER</div>
 </div>
 </body>
 </html>
